elixir/force-app/main/default/objects/Adback__c/Adback__c.object-meta.xml
<CustomObject>
    <label>Adback</label>
    <nameField>
        <label>Adback</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Adback</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>