elixir/force-app/main/default/objects/Adback__c/fields/Addback_Period__c.field-meta.xml
<CustomField>
    <fullName>Addback_Period__c</fullName>
    <label>Addback Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Previous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>