elixir/force-app/main/default/objects/Adback__c/fields/Amortisation_Of_Goodwill__c.field-meta.xml
<CustomField>
    <fullName>Amortisation_Of_Goodwill__c</fullName>
    <label>Amortisation Of Goodwill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>