elixir/force-app/main/default/objects/Adback__c/fields/Annuities__c.field-meta.xml
<CustomField>
    <fullName>Annuities__c</fullName>
    <label>Annuities</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>