elixir/force-app/main/default/objects/Adback__c/fields/Business_Income_Period__c.field-meta.xml
<CustomField>
    <fullName>Business_Income_Period__c</fullName>
    <label>Business Income Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Income Previous Period</fullName>
            </value>
            <value>
                <fullName>Business Income Current Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>