elixir/force-app/main/default/objects/Adback__c/fields/Carry_Forward_Losses__c.field-meta.xml
<CustomField>
    <fullName>Carry_Forward_Losses__c</fullName>
    <label>Carry Forward Losses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>