elixir/force-app/main/default/objects/Adback__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>