elixir/force-app/main/default/objects/Adback__c/fields/Non_Cash_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Non_Cash_Benefits__c</fullName>
    <label>Non Cash Benefits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>