elixir/force-app/main/default/objects/Adback__c/fields/Other_Adback_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Adback_Description__c</fullName>
    <label>Other Adback Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>