elixir/force-app/main/default/objects/Adback__c/fields/Payment_To_Director__c.field-meta.xml
<CustomField>
    <fullName>Payment_To_Director__c</fullName>
    <label>Payment To Director</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>