elixir/force-app/main/default/objects/Adback__c/fields/Super_Concessional_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Super_Concessional_Contribution__c</fullName>
    <label>Super Concessional Contribution</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>