elixir/force-app/main/default/objects/Adback__c/fields/Superannuation_Excess__c.field-meta.xml
<CustomField>
    <fullName>Superannuation_Excess__c</fullName>
    <label>Superannuation Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>